--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>calcolatore investimenti</h1>
+            <h1>Calcolatore investimenti</h1>
             <p class="sottotitolo-pagina">
                 Rendimento annuo fisso del 6% con interesse composto.<br>
                 <small>(Tasso medio realistico per un portafoglio bilanciato a lungo termine)</small>
@@ -22,12 +22,12 @@
         <main>
             <section class="card input-card">
                 <div class="input-group">
-                    <label for="investimentoMensile">💲 Investimento Mensile</label>
+                    <label for="investimentoMensile">💲 Investimento mensile</label>
                     <input type="number" id="investimentoMensile" value="200">
                     <input type="range" id="investimentoSlider" min="50" max="2000" step="50" value="200">
                 </div>
                 <div class="input-group">
-                    <label for="durataAnni">🗓️ Durata (Anni)</label>
+                    <label for="durataAnni">🗓️ Periodo (anni)</label>
                     <input type="number" id="durataAnni" value="21">
                     <input type="range" id="durataSlider" min="1" max="50" step="1" value="21">
                 </div>
@@ -35,7 +35,7 @@
 
             <section class="card results-card">
                 <header class="results-header">
-                    <h2>↗️ risultati proiezione</h2>
+                    <h2>↗️ Risultati proiezione</h2>
                 </header>
                 <div class="results-grid">
                     <div class="result-item">
@@ -53,7 +53,7 @@
                 <p id="testoRiepilogo" class="summary-text"></p>
                 
                 <div class="result-final">
-                    <p>Valore Finale</p>
+                    <p>Valore finale</p>
                     <span id="valoreFinale"></span>
                 </div>
                 
@@ -63,8 +63,8 @@
                         <div id="barraInteressi"></div>
                     </div>
                     <div class="bar-labels">
-                        <span>Capitale Investito</span>
-                        <span>Interessi Composti</span>
+                        <span>Capitale investito</span>
+                        <span>Interessi composti</span>
                     </div>
                 </div>
             </section>
