--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calcolatore Investimenti</title>
-    <!-- Collegamento a style.css, che ora importa il font Nunito -->
     <link rel="stylesheet" href="style.css">
-    <!-- Favicon stile Apple (emoji) -->
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💹</text></svg>">
+    <!-- NOTA: Carica un file "favicon.ico" nel tuo repository per far funzionare questo link -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Calcolatore investimenti</h1>
+            <!-- Aggiunta classe per la capitalizzazione controllata dal CSS -->
+            <h1 class="capitalize-words">calcolatore investimenti</h1>
+            <!-- Testo del sottotitolo accorciato -->
             <p class="sottotitolo-pagina">
-                Rendimento annuo fisso del 6% con interesse composto.<br>
-                <small>(Tasso medio realistico per un portafoglio bilanciato a lungo termine)</small>
+                Rendimento fisso del 6% con interesse composto.<br>
+                <small>(Media realistica per un portafoglio a lungo termine)</small>
             </p>
         </header>
 
@@ -35,21 +36,23 @@
 
             <section class="card results-card">
                 <header class="results-header">
-                    <h2>↗️ Risultati proiezione</h2>
+                    <!-- Aggiunta classe per la capitalizzazione controllata dal CSS -->
+                    <h2 class="capitalize-words">↗️ risultati proiezione</h2>
                 </header>
                 <div class="results-grid">
                     <div class="result-item">
-                        <p>Capitale Investito</p>
+                        <!-- Testo corretto in minuscolo -->
+                        <p>Capitale investito</p>
                         <span id="capitaleInvestito"></span>
                     </div>
                     <div class="result-item">
-                        <p>Interessi Maturati</p>
+                        <!-- Testo corretto in minuscolo -->
+                        <p>Interessi maturati</p>
                         <span id="interessiMaturati" class="interest-value"></span>
                         <span id="percentualeInteressi" class="interest-percentage"></span>
                     </div>
                 </div>
 
-                <!-- TESTO SPOSTATO QUI -->
                 <p id="testoRiepilogo" class="summary-text"></p>
                 
                 <div class="result-final">
@@ -63,6 +66,7 @@
                         <div id="barraInteressi"></div>
                     </div>
                     <div class="bar-labels">
+                        <!-- Testo corretto in minuscolo -->
                         <span>Capitale investito</span>
                         <span>Interessi composti</span>
                     </div>
