--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Calcolatore Investimenti</title>
     <link rel="stylesheet" href="style.css">
     <!-- NOTA: Carica un file "favicon.ico" nel tuo repository per far funzionare questo link -->
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/png" href="image.png">
 </head>
 <body>
     <div class="container">
